--- a/TableView/src/main/AndroidManifest.xml
+++ b/TableView/src/main/AndroidManifest.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright © 2017 CHANGLEI. All rights reserved.
+  -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
           package="com.box.me.widget"
