--- a/TableViewLibrary/src/main/AndroidManifest.xml
+++ b/TableViewLibrary/src/main/AndroidManifest.xml
@@ -1,13 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="me.box.widget">
 
-          package="me.box.widget"
->
-
-    <application android:allowBackup="true"
-                 android:label="@string/app_name"
-                 android:supportsRtl="true"
-    >
-
-    </application>
+    <application
+        android:allowBackup="true"
+        android:supportsRtl="true"/>
 
 </manifest>
