--- a/testtableview/build.gradle
+++ b/testtableview/build.gradle
@@ -1,5 +1,8 @@
+/*
+ * Copyright © 2017 CHANGLEI. All rights reserved.
+ */
+
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 26
@@ -29,10 +32,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'org.jetbrains.anko:anko-sdk15:0.8.3'
-    compile 'org.jetbrains.anko:anko-support-v4:0.8.3'
-    compile 'org.jetbrains.anko:anko-appcompat-v7:0.8.3'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile project(':TableViewLibrary')
