--- a/TableViewLibrary/build.gradle
+++ b/TableViewLibrary/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'me.tatarka:gradle-retrolambda:3.4.0'
+    compile 'com.annimon:stream:1.1.4'
 }
