添加测试程序

--- a/TableViewDemo/src/main/AndroidManifest.xml
+++ b/TableViewDemo/src/main/AndroidManifest.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="me.box.app.testtableview">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="me.box.app.tableviewdemo">
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".TestTableViewActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name="me.box.app.tableviewdemo.TableViewDemoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <!--<activity android:name=".TestTableViewActivity"/>-->
+        <!--<activity android:name=".TableViewDemoActivity"/>-->
     </application>
 
 </manifest>
