--- a/TableViewDemo/build.gradle
+++ b/TableViewDemo/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "25.0.3"
 
     defaultConfig {
-        applicationId "me.box.app.testtableview"
+        applicationId "me.box.app.tableviewdemo"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
